# ExAndroidNativeEmu

./: MANIFEST.in  pyproject.toml  setup.py
ExAndroidNativeEmu/: ins-jni.txt
ExAndroidNativeEmu.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ExAndroidNativeEmu/androidemu/: emulator.py
ExAndroidNativeEmu/vfs/proc/self/: maps
